{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 17,
  "lineage": "d2222bbd-2227-aa1e-0f8c-570fc13b4a4f",
  "resources": [
    {
      "module": "module.my-rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:security-group/sg-0b8d9ce983f0c8e3f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8d9ce983f0c8e3f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "my-rds-security-group-3306",
            "name_prefix": "",
            "owner_id": "920372995171",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "Dev"
            },
            "tags_all": {
              "Env": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0463621ef8f834d65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-rds",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "eggress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:security-group-rule/sgr-0cf465fae0cd299d0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0cf465fae0cd299d0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b8d9ce983f0c8e3f",
            "security_group_rule_id": "sgr-0cf465fae0cd299d0",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-rds.aws_security_group.rds-security-group",
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-rds",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:security-group-rule/sgr-0409ca2fc37768cdf",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0409ca2fc37768cdf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b8d9ce983f0c8e3f",
            "security_group_rule_id": "sgr-0409ca2fc37768cdf",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-rds.aws_security_group.rds-security-group",
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:internet-gateway/igw-02d578a46196f8f80",
            "id": "igw-02d578a46196f8f80",
            "owner_id": "920372995171",
            "tags": {
              "Env": "Dev",
              "Name": "myvpc1_gateway_name"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "myvpc1_gateway_name"
            },
            "vpc_id": "vpc-0463621ef8f834d65"
          },
          "dependencies": [
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-public-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:route-table/rtb-03a5ba904695f1d25",
            "id": "rtb-03a5ba904695f1d25",
            "owner_id": "920372995171",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02d578a46196f8f80",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "Dev",
              "Name": "myvpc1_routetable"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "myvpc1_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0463621ef8f834d65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc1.aws_internet_gateway.gateway",
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0094b9e05859bca3e",
            "route_table_id": "rtb-03a5ba904695f1d25",
            "subnet_id": "subnet-0397cfa694a8a774f"
          },
          "dependencies": [
            "module.myvpc1.aws_internet_gateway.gateway",
            "module.myvpc1.aws_route_table.my-public-routetable",
            "module.myvpc1.aws_subnet.my-public-subnet",
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bf1699481a9fd67",
            "route_table_id": "rtb-03a5ba904695f1d25",
            "subnet_id": "subnet-0a9592501af4369c5"
          },
          "dependencies": [
            "module.myvpc1.aws_internet_gateway.gateway",
            "module.myvpc1.aws_route_table.my-public-routetable",
            "module.myvpc1.aws_subnet.my-public-subnet",
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:subnet/subnet-044665a154a3744df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044665a154a3744df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "920372995171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Dev",
              "Name": "private_subnet1"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "private_subnet1"
            },
            "vpc_id": "vpc-0463621ef8f834d65"
          },
          "dependencies": [
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:subnet/subnet-0cb7dc3b2705adf66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb7dc3b2705adf66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "920372995171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Dev",
              "Name": "private_subnet2"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "private_subnet2"
            },
            "vpc_id": "vpc-0463621ef8f834d65"
          },
          "dependencies": [
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:subnet/subnet-04e9af7408f920e81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e9af7408f920e81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "920372995171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Dev",
              "Name": "private_subnet23"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "private_subnet23"
            },
            "vpc_id": "vpc-0463621ef8f834d65"
          },
          "dependencies": [
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:subnet/subnet-0397cfa694a8a774f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0397cfa694a8a774f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "920372995171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Dev",
              "Name": "public_subnet1"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "public_subnet1"
            },
            "vpc_id": "vpc-0463621ef8f834d65"
          },
          "dependencies": [
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:subnet/subnet-0a9592501af4369c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9592501af4369c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "920372995171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Dev",
              "Name": "public_subnet2"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "public_subnet2"
            },
            "vpc_id": "vpc-0463621ef8f834d65"
          },
          "dependencies": [
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:vpc/vpc-0463621ef8f834d65",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04177c9f3d54489a9",
            "default_route_table_id": "rtb-0b2a8f652b0b263b3",
            "default_security_group_id": "sg-09f0f7716222d1667",
            "dhcp_options_id": "dopt-0e750eb475cedc74a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0463621ef8f834d65",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2a8f652b0b263b3",
            "owner_id": "920372995171",
            "tags": {
              "Env": "Dev",
              "Name": "myvpc-1"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "myvpc-1"
            }
          }
        }
      ]
    }
  ]
}